--- a/Api/BillsOfExchange/BillsOfExchange.csproj
+++ b/Api/BillsOfExchange/BillsOfExchange.csproj
@@ -5,7 +5,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Data\BillsOfExchange.json" />
+    <Content Remove="Data\Endorsements.json" />
+    <Content Remove="Data\Parties.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Data\BillsOfExchange.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Endorsements.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Parties.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BillsOfExchange.DataProvider\BillsOfExchange.DataProvider.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Requests\" />
   </ItemGroup>
 
 
