narychlo ale funguje to

--- a/Api/BillsOfExchange/Client/tsconfig.json
+++ b/Api/BillsOfExchange/Client/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ES6",
     "module": "esnext",
     "moduleResolution": "node",
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext",
+      "ES6",
       "scripthost"
     ],
     "allowJs": false,
