--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,9 @@
     "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@redux-requests/axios": "^1.1.1",
+    "@redux-requests/core": "^1.6.2",
+    "@redux-requests/react": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -24,17 +27,21 @@
     "fs-extra": "^9.1.0",
     "generate-react-cli": "^6.0.2",
     "lodash": "^4.17.21",
+    "node-sass": "^5.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.4",
     "react-refresh": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "webpack-pwa-manifest": "^4.3.0",
-    "yargs": "^16.2.0",
-    "node-sass": "^5.0.0"
+    "yargs": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
